--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "bootstrap": "4.6.0",
+    "dotenv": "^10.0.0",
+    "graphql": "^16.2.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
