--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "bootstrap": "4.6.0",
     "dotenv": "^10.0.0",
     "graphql": "^16.2.0",
@@ -18,6 +21,8 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-share": "^4.4.0",
+    "sass": "^1.45.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
